--- a/automations/templates/applications.html
+++ b/automations/templates/applications.html
@@ -24,10 +24,10 @@
    </div>
    <script>
         function get_automations(value){
-            return window.location.assign(`http://127.0.0.1:5000/applications/${value}`)
+            return window.location.assign(`https://costumer-facing1-production.up.railway.app/applications/${value}`)
         }
         function go_automation(value){
-            return window.location.assign(`http://127.0.0.1:5000/run-automation/${value}`)
+            return window.location.assign(`https://costumer-facing1-production.up.railway.app/run-automation/${value}`)
         }
     </script>
 {% endblock %}
