--- a/automations/templates/homepage.html
+++ b/automations/templates/homepage.html
@@ -11,11 +11,11 @@
             <img class="w-14" src="../static/images/visa(1).png">
             <h2 class="font-semibold text-3xl">Guided Entry</h2>
         </div>
-        <div onclick="window.location.replace('http://127.0.0.1:5000/weekly')" class="w-[402px] h-[224px] bg-white rounded-md shadow-md flex flex-col justify-evenly px-8 py-11 hover:border-solid hover:border-green-700 hover:border-[2px] cursor-pointer">
+        <div onclick="window.location.replace('https://costumer-facing1-production.up.railway.app/weekly')" class="w-[402px] h-[224px] bg-white rounded-md shadow-md flex flex-col justify-evenly px-8 py-11 hover:border-solid hover:border-green-700 hover:border-[2px] cursor-pointer">
             <img class="w-14" src="../static/images/enojado.png">
             <h2 class="font-semibold text-3xl">Weekly</h2>
         </div>
-        <div onclick="window.location.replace('http://127.0.0.1:5000/applications')" class="w-[402px] h-[224px] bg-white rounded-md shadow-md flex flex-col justify-evenly px-8 py-11 hover:border-solid hover:border-green-700 hover:border-[2px] cursor-pointer">
+        <div onclick="window.location.replace('https://costumer-facing1-production.up.railway.app/applications')" class="w-[402px] h-[224px] bg-white rounded-md shadow-md flex flex-col justify-evenly px-8 py-11 hover:border-solid hover:border-green-700 hover:border-[2px] cursor-pointer">
             <img class="w-14" src="../static/images/visa.png">
             <h2 class="font-semibold text-3xl">Visa Applications</h2>
         </div>
