--- a/automations/templates/homepage.html
+++ b/automations/templates/homepage.html
@@ -2,34 +2,34 @@
 {%block title%}Automations{% endblock %}
 
 {%block content%}
-    <div class="flex items-center justify-evenly w-1/2">
-        <img class="w-[153px] h-[153px]" src="../static/images/robot.png">
-        <h1 class="text-5xl font-extrabold">Hello Vanessa!</h1>
+    <div class="flex items-end justify-start w-8/12">
+        <img class="w-[103px] h-[103px]" src="../static/images/robot.png">
+        <h1 class="text-5xl ml-6 font-extrabold">Hello Vanessa!</h1>
     </div>
-    <div class="w-10/12 justify-items-center gap-10 grid grid-cols-3 grid-flow-row mt-11">
-        <div class="w-[402px] h-[224px] bg-white rounded-md shadow-md flex flex-col justify-evenly px-8 py-11 hover:border-solid hover:border-green-700 hover:border-[2px] cursor-pointer">
-            <img class="w-14" src="../static/images/visa(1).png">
+    <div class="w-8/12 justify-items-center gap-10 grid grid-cols-2 grid-flow-row mt-20">
+        <div class="w-full h-[112px] bg-white rounded-md flex justify-between px-6 items-center border-solid border-[#302E2E] border-[2px] cursor-pointer hover:bg-[#4ADE80]">
             <h2 class="font-semibold text-3xl">Guided Entry</h2>
+            <img class="w-16 h-16" src="../static/images/guia.png">
         </div>
-        <div onclick="window.location.replace('http://127.0.0.1:5000/weekly')" class="w-[402px] h-[224px] bg-white rounded-md shadow-md flex flex-col justify-evenly px-8 py-11 hover:border-solid hover:border-green-700 hover:border-[2px] cursor-pointer">
-            <img class="w-14" src="../static/images/enojado.png">
+        <div onclick="window.location.replace('http://127.0.0.1:5000/weekly')" class="w-full h-[112px] bg-white rounded-md flex justify-between px-6 items-center border-solid border-[#302E2E] border-[2px] cursor-pointer hover:bg-[#4ADE80]">
             <h2 class="font-semibold text-3xl">Weekly</h2>
+            <img class="w-16 h-16" src="../static/images/enojado.png">
         </div>
-        <div onclick="window.location.replace('http://127.0.0.1:5000/applications')" class="w-[402px] h-[224px] bg-white rounded-md shadow-md flex flex-col justify-evenly px-8 py-11 hover:border-solid hover:border-green-700 hover:border-[2px] cursor-pointer">
-            <img class="w-14" src="../static/images/visa.png">
+        <div onclick="window.location.replace('http://127.0.0.1:5000/applications')" class="w-full h-[112px] bg-white rounded-md flex justify-between px-6 items-center border-solid border-[#302E2E] border-[2px] cursor-pointer hover:bg-[#4ADE80]">
             <h2 class="font-semibold text-3xl">Visa Applications</h2>
+            <img class="w-16 h-16" src="../static/images/visa.png">
         </div>
-        <div class="w-[402px] h-[224px] bg-white rounded-md shadow-md flex flex-col justify-evenly px-8 py-11 hover:border-solid hover:border-green-700 hover:border-[2px] cursor-pointer">
-            <img class="w-14 " src="../static/images/administracion.png">
+        <div class="w-full h-[112px] bg-white rounded-md flex justify-between px-6 items-center border-solid border-[#302E2E] border-[2px] cursor-pointer hover:bg-[#4ADE80]">
             <h2 class="font-semibold text-3xl">Admin portal</h2>
+            <img class="w-16 h-16" src="../static/images/administracion.png">
         </div>
-        <div class="w-[402px] h-[224px] bg-white rounded-md shadow-md flex flex-col justify-evenly px-8 py-11 hover:border-solid hover:border-green-700 hover:border-[2px] cursor-pointer">
-            <img class="w-14 " src="../static/images/objetivo.png">
+        <div class="w-full h-[112px] bg-white rounded-md flex justify-between px-6 items-center border-solid border-[#302E2E] border-[2px] cursor-pointer hover:bg-[#4ADE80]">
             <h2 class="font-semibold text-3xl">Embassy Reg</h2>
+            <img class="w-16 h-16" src="../static/images/embajada.png">
         </div>
-        <div class="w-[402px] h-[224px] bg-white rounded-md shadow-md flex flex-col justify-evenly px-8 py-11 hover:border-solid hover:border-green-700 hover:border-[2px] cursor-pointer">
-            <img class="w-14 " src="../static/images/pasaporte.png">
+        <div class="w-full h-[112px] bg-white rounded-md flex justify-between px-6 items-center border-solid border-[#302E2E] border-[2px] cursor-pointer hover:bg-[#4ADE80]">
             <h2 class="font-semibold text-3xl">Passport</h2>
+            <img class="w-16 h-16" src="../static/images/pasaporte.png">
         </div>
     </div>
 {% endblock %}
