--- a/automations/templates/applications.html
+++ b/automations/templates/applications.html
@@ -1,11 +1,13 @@
 {% extends "base.html" %}
 {% block title %}App Automations{% endblock %}
 {% block content %}
-   <h1 class="text-5xl font-extrabold">Application Automations</h1>
+   <div class="w-9/12">
+    <h1 class="text-5xl font-extrabold">Application Automations</h1>
+   </div>
    <div class="w-9/12 h-full mt-12 flex">
-        <div class="col-span-2 bg-black rounded-sm w-5/12">
+        <div class="col-span-2 bg-[#302E2E] rounded-[5px] w-5/12">
             {%for value in categories%}
-                <h1 onclick="get_automations(this.innerText)" class="text-white font-semibold cursor-pointer py-3 px-6 hover:bg-green-500 hover:text-black">
+                <h1 onclick="get_automations(this.innerText)" class="text-white text-xl font-medium cursor-pointer py-3 px-6 hover:bg-[#4ADE80] hover:text-[#302E2E]">
                     {{ value }}
                 </h1>
             {%endfor%}
@@ -13,11 +15,11 @@
         <div class="w-full">   
             <input
                 placeholder="Search automation..." 
-                class="font-medium focus:outline-none ml-10 mb-2 px-6 w-full shadow-md rounded-sm bg-white h-10"
+                class="font-medium focus:outline-none ml-10 mb-2 px-6 w-full border-solid border-[1px] border-[#302E2E] rounded-sm bg-white h-10"
             >
             {% for automation in automations %}
-                <div onclick="go_automation(this.innerText)" class="focus:outline-none cursor-pointer ml-10 p-6 rounded-md bg-white h-24 mb-3 w-full hover:border-black border-[2px]">
-                    <h1 class="text-xl font-bold ">{{ automation.Title }}</h1>
+                <div onclick="go_automation(this.innerText)" class="cursor-pointer ml-10 p-6 rounded-md bg-white h-24 mb-3 w-full hover:border-[#302E2E] border-[2px] hover:bg-[#4ADE80]">
+                    <h1 class="text-2xl font-bold">{{ automation.Title }}</h1>
                 </div>
             {%endfor%}
         </div>
