--- a/automations/templates/base.html
+++ b/automations/templates/base.html
@@ -7,6 +7,6 @@
     {% endblock %}
 </head>
 <body>
-    <div class="w-full h-screen flex flex-col items-center py-14">{%block content%}{% endblock %}</div>
+    <div class="w-full h-screen overflow-x-hidden flex flex-col items-center py-14">{%block content%}{% endblock %}</div>
 </body>
 </html>
