--- a/automations/templates/applications.html
+++ b/automations/templates/applications.html
@@ -7,7 +7,7 @@
    <div class="w-9/12 h-full mt-12 flex">
         <div class="col-span-2 bg-[#302E2E] rounded-[5px] w-5/12">
             {%for value in categories%}
-                <a href="{{goto}}/applications/{{value}}">
+                <a href="/applications/{{value}}">
                     <h1 class="text-white text-xl font-medium cursor-pointer py-3 px-6 hover:bg-[#4ADE80] hover:text-[#302E2E]">
                         {{ value }}
                     </h1>
@@ -20,7 +20,7 @@
                 class="font-medium focus:outline-none ml-10 mb-2 px-6 w-full border-solid border-[1px] border-[#302E2E] rounded-sm bg-white h-10"
             >
             {% for automation in automations %}
-                <a class="w-full" href="{{goto}}/run-automation/{{automation.Title}}">
+                <a class="w-full" href="/run-automation/{{automation.Title}}">
                     <div class="cursor-pointer ml-10 p-6 rounded-md bg-white h-24 mb-3 hover:border-[#302E2E] border-[2px] hover:bg-[#4ADE80]">
                         <h1 class="text-2xl font-bold">{{ automation.Title }}</h1>
                     </div>
