--- a/automations/templates/homepage.html
+++ b/automations/templates/homepage.html
@@ -7,37 +7,37 @@
         <h1 class="text-5xl ml-6 font-extrabold">Hello Vanessa!</h1>
     </div>
     <div class="w-8/12 justify-items-center gap-10 grid grid-cols-2 grid-flow-row mt-20">
-        <a class="w-full" href="{{ goto }}/guided-entry">
+        <a class="w-full" href="/guided-entry">
             <div class="h-[112px] bg-white rounded-md flex justify-between px-6 items-center border-solid border-[#302E2E] border-[2px] cursor-pointer hover:bg-[#4ADE80]">
                 <h2 class="font-semibold text-3xl">Guided Entry</h2>
                 <img class="w-16 h-16" src="../static/images/guia.png">
             </div>
         </a>
-        <a class="w-full" href="{{ goto }}/weekly">
+        <a class="w-full" href="/weekly">
             <div class="h-[112px] bg-white rounded-md flex justify-between px-6 items-center border-solid border-[#302E2E] border-[2px] cursor-pointer hover:bg-[#4ADE80]">
                 <h2 class="font-semibold text-3xl">Weekly</h2>
                 <img class="w-16 h-16" src="../static/images/enojado.png">
             </div>
         </a>
-        <a class="w-full" href="{{ goto }}/applications">
+        <a class="w-full" href="/applications">
             <div class="h-[112px] bg-white rounded-md flex justify-between px-6 items-center border-solid border-[#302E2E] border-[2px] cursor-pointer hover:bg-[#4ADE80]">
                 <h2 class="font-semibold text-3xl">Visa Applications</h2>
                 <img class="w-16 h-16" src="../static/images/visa.png">
             </div>
         </a>
-        <a class="w-full" href="{{ goto }}/admin">
+        <a class="w-full" href="/admin">
             <div class="h-[112px] bg-white rounded-md flex justify-between px-6 items-center border-solid border-[#302E2E] border-[2px] cursor-pointer hover:bg-[#4ADE80]">
                 <h2 class="font-semibold text-3xl">Admin portal</h2>
                 <img class="w-16 h-16" src="../static/images/administracion.png">
             </div>
         </a>
-        <a class="w-full" href="{{ goto }}/embassy">
+        <a class="w-full" href="/embassy">
             <div class=" h-[112px] bg-white rounded-md flex justify-between px-6 items-center border-solid border-[#302E2E] border-[2px] cursor-pointer hover:bg-[#4ADE80]">
                 <h2 class="font-semibold text-3xl">Embassy Reg</h2>
                 <img class="w-16 h-16" src="../static/images/embajada.png">
             </div>
         </a>
-        <a class="w-full" href="{{ goto }}/passport">
+        <a class="w-full" href="/passport">
             <div class="h-[112px] bg-white rounded-md flex justify-between px-6 items-center border-solid border-[#302E2E] border-[2px] cursor-pointer hover:bg-[#4ADE80]">
                 <h2 class="font-semibold text-3xl">Passport</h2>
                 <img class="w-16 h-16" src="../static/images/pasaporte.png">
