--- a/automations/templates/run_automation.html
+++ b/automations/templates/run_automation.html
@@ -90,6 +90,7 @@
         }
         document.getElementById('automation_running').classList.remove('hidden')
         document.getElementById('automation_running').classList.add('absolute')
+        console.log(`${url}/run-automation/${value.split('%20').join(' ')}`)
         await fetch(`${url}/run-automation/${value.split('%20').join(' ')}`,{
             method: 'POST',
             headers: {'Content-Type':'application/json'},
