--- a/automations/templates/run_automation.html
+++ b/automations/templates/run_automation.html
@@ -122,7 +122,7 @@
                 }
                 
             }
-        )
+        ).catch((res) => console.log(res))
     }
     </script>
 {% endblock %}
