--- a/automations/templates/applications.html
+++ b/automations/templates/applications.html
@@ -21,8 +21,13 @@
             >
             {% for automation in automations %}
                 <a class="w-full" href="/run-automation/{{automation.Title}}">
-                    <div class="cursor-pointer ml-10 p-6 rounded-md bg-white h-24 mb-3 hover:border-[#302E2E] border-[2px] hover:bg-[#4ADE80]">
-                        <h1 class="text-2xl font-bold">{{ automation.Title }}</h1>
+                    <div class="w-full cursor-pointer ml-10 p-6 rounded-md bg-white h-fit mb-3 hover:border-[#302E2E] border-[2px] hover:bg-[#4ADE80]">
+                        <h1 class="text-2xl font-bold">{{ automation.Title.replace('-', ' ') }}</h1>
+                        <ul class="list-disc">
+                            {% for sub in automations[0]['Subtitles']%}
+                                    <li class="mt-3 ml-5">{{sub}}</li>
+                            {%endfor%}
+                        </ul>
                     </div>
                 </a>
             {%endfor%}
